--- a/pixel-city/Base.lproj/Main.storyboard
+++ b/pixel-city/Base.lproj/Main.storyboard
@@ -1,26 +1,94 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G18013" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MapVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MapVC" customModule="pixel_city" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsCompass="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7m-4E-Xkl">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </mapView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="toE-Sb-b93">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Double-tap to draw a pin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAb-D7-UT9">
+                                        <rect key="frame" x="65" y="25" width="190" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="JZc-ba-ls9"/>
+                                            <constraint firstAttribute="width" constant="190" id="XcA-ZS-8MX"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96470588235294119" green="0.65098039215686276" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="aAb-D7-UT9" firstAttribute="centerX" secondItem="toE-Sb-b93" secondAttribute="centerX" id="0UY-YL-VUm"/>
+                                    <constraint firstAttribute="height" constant="70" id="ehe-Dm-klw"/>
+                                    <constraint firstItem="aAb-D7-UT9" firstAttribute="centerY" secondItem="toE-Sb-b93" secondAttribute="centerY" id="fbY-cd-fzc"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7d7-Kr-teE">
+                                <rect key="frame" x="254" y="498" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Kj5-4I-Uty"/>
+                                    <constraint firstAttribute="width" constant="50" id="fpy-ZP-VfJ"/>
+                                </constraints>
+                                <state key="normal" image="locationButton"/>
+                                <connections>
+                                    <action selector="centerMapBtnWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="exG-tr-auY"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1eg-hk-K92">
+                                <rect key="frame" x="0.0" y="548" width="320" height="0.0"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7d7-Kr-teE" secondAttribute="bottom" constant="20" id="59M-iL-Fsa"/>
+                            <constraint firstItem="j7m-4E-Xkl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6Ld-06-6Sa"/>
+                            <constraint firstItem="1eg-hk-K92" firstAttribute="top" secondItem="7d7-Kr-teE" secondAttribute="bottom" id="A9I-tD-Ncl"/>
+                            <constraint firstItem="1eg-hk-K92" firstAttribute="top" secondItem="wfy-db-euE" secondAttribute="bottom" id="BHn-co-yvO"/>
+                            <constraint firstAttribute="trailing" secondItem="1eg-hk-K92" secondAttribute="trailing" id="CDk-q7-kiN"/>
+                            <constraint firstAttribute="trailing" secondItem="j7m-4E-Xkl" secondAttribute="trailing" id="Chh-bP-O2g"/>
+                            <constraint firstItem="toE-Sb-b93" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EuP-XH-5oX"/>
+                            <constraint firstAttribute="trailing" secondItem="toE-Sb-b93" secondAttribute="trailing" id="PEK-UT-3tH"/>
+                            <constraint firstItem="j7m-4E-Xkl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SkR-eM-QVy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7d7-Kr-teE" secondAttribute="trailing" id="X5m-Eg-ABK"/>
+                            <constraint firstItem="toE-Sb-b93" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="js8-d3-AA6"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="j7m-4E-Xkl" secondAttribute="bottom" id="kJV-y6-6tW"/>
+                            <constraint firstItem="1eg-hk-K92" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yn2-c9-Mne"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="j7m-4E-Xkl" id="pga-Mt-E2N"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116.25" y="121.47887323943662"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="locationButton" width="67" height="67"/>
+    </resources>
 </document>
