--- a/pixel-city/Base.lproj/Main.storyboard
+++ b/pixel-city/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsCompass="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7m-4E-Xkl">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsUserLocation="YES" showsCompass="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7m-4E-Xkl">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </mapView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="toE-Sb-b93">
@@ -46,34 +45,28 @@
                                     <constraint firstItem="aAb-D7-UT9" firstAttribute="centerY" secondItem="toE-Sb-b93" secondAttribute="centerY" id="fbY-cd-fzc"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7d7-Kr-teE">
-                                <rect key="frame" x="254" y="498" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Kj5-4I-Uty"/>
-                                    <constraint firstAttribute="width" constant="50" id="fpy-ZP-VfJ"/>
-                                </constraints>
-                                <state key="normal" image="locationButton"/>
-                                <connections>
-                                    <action selector="centerMapBtnWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="exG-tr-auY"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1eg-hk-K92">
                                 <rect key="frame" x="0.0" y="548" width="320" height="0.0"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="onB-7v-Ooo">
+                                <rect key="frame" x="244" y="481" width="67" height="67"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="locationButton"/>
+                                <connections>
+                                    <action selector="centerMapWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3pr-6S-oVV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7d7-Kr-teE" secondAttribute="bottom" constant="20" id="59M-iL-Fsa"/>
                             <constraint firstItem="j7m-4E-Xkl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6Ld-06-6Sa"/>
-                            <constraint firstItem="1eg-hk-K92" firstAttribute="top" secondItem="7d7-Kr-teE" secondAttribute="bottom" id="A9I-tD-Ncl"/>
                             <constraint firstItem="1eg-hk-K92" firstAttribute="top" secondItem="wfy-db-euE" secondAttribute="bottom" id="BHn-co-yvO"/>
                             <constraint firstAttribute="trailing" secondItem="1eg-hk-K92" secondAttribute="trailing" id="CDk-q7-kiN"/>
                             <constraint firstAttribute="trailing" secondItem="j7m-4E-Xkl" secondAttribute="trailing" id="Chh-bP-O2g"/>
                             <constraint firstItem="toE-Sb-b93" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EuP-XH-5oX"/>
                             <constraint firstAttribute="trailing" secondItem="toE-Sb-b93" secondAttribute="trailing" id="PEK-UT-3tH"/>
                             <constraint firstItem="j7m-4E-Xkl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SkR-eM-QVy"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7d7-Kr-teE" secondAttribute="trailing" id="X5m-Eg-ABK"/>
                             <constraint firstItem="toE-Sb-b93" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="js8-d3-AA6"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="j7m-4E-Xkl" secondAttribute="bottom" id="kJV-y6-6tW"/>
                             <constraint firstItem="1eg-hk-K92" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yn2-c9-Mne"/>
