--- a/pixel-city/Base.lproj/Main.storyboard
+++ b/pixel-city/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -54,6 +55,10 @@
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="onB-7v-Ooo">
                                 <rect key="frame" x="244" y="481" width="67" height="67"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="8uz-QI-WyJ"/>
+                                    <constraint firstAttribute="width" constant="50" id="Q3X-Nz-uem"/>
+                                </constraints>
                                 <state key="normal" image="locationButton"/>
                                 <connections>
                                     <action selector="centerMapWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3pr-6S-oVV"/>
@@ -69,10 +74,10 @@
                             <constraint firstItem="toE-Sb-b93" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EuP-XH-5oX"/>
                             <constraint firstAttribute="trailing" secondItem="toE-Sb-b93" secondAttribute="trailing" id="PEK-UT-3tH"/>
                             <constraint firstItem="j7m-4E-Xkl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SkR-eM-QVy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="onB-7v-Ooo" secondAttribute="trailing" id="Ze6-Vo-bBn"/>
                             <constraint firstItem="toE-Sb-b93" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="js8-d3-AA6"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="j7m-4E-Xkl" secondAttribute="bottom" id="kJV-y6-6tW"/>
                             <constraint firstItem="1eg-hk-K92" firstAttribute="top" secondItem="onB-7v-Ooo" secondAttribute="bottom" constant="20" id="tvK-xq-tOZ"/>
-                            <constraint firstAttribute="trailing" secondItem="onB-7v-Ooo" secondAttribute="trailing" id="yLw-Qe-8Kt"/>
                             <constraint firstItem="1eg-hk-K92" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yn2-c9-Mne"/>
                         </constraints>
                     </view>
