--- a/pixel-city/Base.lproj/Main.storyboard
+++ b/pixel-city/Base.lproj/Main.storyboard
@@ -91,6 +91,58 @@
             </objects>
             <point key="canvasLocation" x="116.25" y="121.47887323943662"/>
         </scene>
+        <!--PopVC-->
+        <scene sceneID="ipd-F0-RG1">
+            <objects>
+                <viewController storyboardIdentifier="PopVC" id="bJ8-iK-ERb" customClass="PopVC" customModule="pixel_city" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dh9-nL-yme"/>
+                        <viewControllerLayoutGuide type="bottom" id="nop-Id-1AQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bBm-jo-JiK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="otG-IY-qzC">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jn0-vI-p13">
+                                <rect key="frame" x="60" y="523" width="200" height="25"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Double-tap to dismiss" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZK-15-FPb">
+                                        <rect key="frame" x="15" y="1" width="170" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="wZK-15-FPb" firstAttribute="centerY" secondItem="jn0-vI-p13" secondAttribute="centerY" id="4qf-sv-c5S"/>
+                                    <constraint firstAttribute="height" constant="25" id="IaL-lE-JIX"/>
+                                    <constraint firstItem="wZK-15-FPb" firstAttribute="centerX" secondItem="jn0-vI-p13" secondAttribute="centerX" id="PWw-CY-KGq"/>
+                                    <constraint firstAttribute="width" constant="200" id="oe1-P3-Pgs"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nop-Id-1AQ" firstAttribute="top" secondItem="jn0-vI-p13" secondAttribute="bottom" constant="20" id="Cop-5i-dfs"/>
+                            <constraint firstItem="otG-IY-qzC" firstAttribute="leading" secondItem="bBm-jo-JiK" secondAttribute="leading" id="DXI-UR-Cdh"/>
+                            <constraint firstAttribute="trailing" secondItem="otG-IY-qzC" secondAttribute="trailing" id="PuT-fZ-5G7"/>
+                            <constraint firstItem="otG-IY-qzC" firstAttribute="top" secondItem="bBm-jo-JiK" secondAttribute="top" id="hoX-dE-ZEJ"/>
+                            <constraint firstItem="jn0-vI-p13" firstAttribute="centerX" secondItem="bBm-jo-JiK" secondAttribute="centerX" id="ij6-6Y-H1V"/>
+                            <constraint firstItem="nop-Id-1AQ" firstAttribute="top" secondItem="otG-IY-qzC" secondAttribute="bottom" id="ky7-9Q-d1y"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="popImageView" destination="otG-IY-qzC" id="1C9-Z3-qJo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hjU-do-hqp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="834.375" y="121.47887323943662"/>
+        </scene>
     </scenes>
     <resources>
         <image name="locationButton" width="67" height="67"/>
